# esp-rainmaker

./: .gitignore  .gitmodules
components/core2forAWS/: .gitignore  Kconfig  README.md  core2forAWS.c
components/core2forAWS/atecc608a/: atecc608a.c
components/esp_rainmaker/src/core/: esp_rmaker_core.c
examples/fan_Core2ForAWS/: CMakeLists.txt  sdkconfig
examples/fan_Core2ForAWS/assets/c_array_images/: fan_2.c  fan_4.c  fan_off.c  house_on.c  thermometer.c
examples/fan_Core2ForAWS/main/: CMakeLists.txt  app_driver.c  app_main.c  button_off.c  display.c  display.h  fan_3.c  fan_4.c  fan_6.c  fanoff.c  hsv2rgb.c  hsv2rgb.h  light.c  light.h  temperature.c  temperature.h
examples/led_light_Core2ForAWS/: sdkconfig
examples/led_light_m5/: sdkconfig
examples/led_light_m5/main/: app_driver.c  app_main.c  app_priv.h
examples/multi_device_m5/: CMakeLists.txt  sdkconfig
examples/multi_device_m5/assets/: 1.c  10.c  11.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  chroma.txt
examples/multi_device_m5/assets/C Array Images/: eleven.c  six.c  three.c
examples/multi_device_m5/assets/c_array_images/: eight.c  fan_1.c  fan_3.c  fan_5.c  fan_6.c  five.c  four.c  houseOff.c  houseOn.c  house_off.c  house_on.c  nine.c  seven.c  ten.c  two.c
examples/multi_device_m5/components/core2forAWS/: core2forAWS.c
examples/multi_device_m5/main/: ButtonOn.c  CMakeLists.txt  Thermometer.c  app_main.c  display.c  display.h  fan.c  fan.h  fan_1.c  fan_2.c  fan_5.c  fan_off.c  houseOff.c  houseOn.c  house_off.c  house_on.c  img_light.c  light.c  one.c  switch.c  switch.h  temperature.c  thermometer.c  todo.md  user_parameters.h
