idf_component_register(SRCS
                       ./app_driver.c
                       ./app_main.c
                       ./fan.c
                       ./display.c
                       ./one.c
                       ./three.c
                       ./five.c
                       ./seven.c
                       ./nine.c
                       ./eleven.c
                       ./fanoff.c
                       ./house_off.c
                       ./house_on.c
                       ./thermometer.c
                       INCLUDE_DIRS ".")

