idf_component_register(SRCS 
        ./app_main.c
        ./fan.c
        ./light.c
        ./temperature.c
        ./switch.c
        ./display.c
        ./button_off.c
        ./button_on.c
        ./one.c
        ./two.c
        ./three.c
        ./four.c
        ./five.c
        ./six.c
        ./seven.c
        ./eight.c
        ./nine.c
        ./ten.c
        ./eleven.c
        ./fanoff.c
        ./house_on.c
        ./house_off.c
        ./thermometer.c
        INCLUDE_DIRS ".")

