idf_component_register(SRCS 
        ./app_main.c
        ./fan.c
        ./light.c
        ./temperature.c
        ./display.c
        ./fan_1.c
        ./fan_2.c
        ./fan_3.c
        ./fan_4.c
        ./fan_5.c
        ./fan_6.c
        ./fan_off.c
        ./house_on.c
        ./house_off.c
        ./thermometer.c
        ./hsv2rgb.c
        INCLUDE_DIRS ".")

